--- a/public/index.html
+++ b/public/index.html
@@ -23,7 +23,7 @@
       Learn how to configure a non-root public URL by running `npm run build`.
     -->
   <script>
-    window.GlobalPractitioner = {
+    window.GlobalPractioner = {
       id: "cf362b2c-8bbe-46b1-b3c5-9a46a0b363e9",
       meta: {
         versionId: "1",
